--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -9,13 +9,15 @@ gem 'sqlite3'
 gem 'haml'
 gem 'haml-rails'
 gem 'rack', '1.3.3'
-group :development do
+group :development, :test do
   gem 'rspec-rails'
+  gem 'watchr'
 end
 
 group :test do
   gem 'rspec'
   gem 'webrat'
+  
 end
 
 # Gems used only for assets and not required
