--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -10,6 +10,7 @@ gem 'haml'
 gem 'haml-rails'
 gem 'rack', '1.3.3'
 gem 'compass'
+gem 'gravatar_image_tag'
 
 group :development, :test do
   gem 'rspec-rails'
@@ -20,6 +21,8 @@ end
 group :test do
   gem 'rspec'
   gem 'webrat'
+  gem 'factory_girl_rails'
+
   
 end
 
