--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -11,11 +11,13 @@ gem 'haml-rails'
 gem 'rack', '1.3.3'
 gem 'compass'
 gem 'gravatar_image_tag'
+gem 'will_paginate'
 
 group :development, :test do
   gem 'rspec-rails'
   gem 'watchr'
   gem 'spork'
+  gem 'faker'
 end
 
 group :test do
